syntax = "proto3";

package videometadata;

service VideoMetadataGRPC {
    rpc AddVideoMetadata(AddVideoMetadataRequest) returns (VideoMetadata);
    rpc GetAllVideoMetadata(Empty) returns (GetAllVideoMetadataResponse);
    rpc UpdateVideoMetadata(UpdateVideoMetadataRequest) returns (VideoMetadata);
}
  
message Empty {}

message VideoMetadata {
    string id = 1;
    string title = 2;
    string desciption = 3;
    string formatName = 4;
    float duration = 5;
    int64 size = 6;
    string status = 7;
    string thumbnailUrl = 8;
    bool isPublic = 9;
    string userId = 10;
}

message AddVideoMetadataRequest {
    string title = 2;
    string desciption = 3;
    string formatName = 4;
    float duration = 5;
    int64 size = 6;
    string userId = 7;
}


message GetAllVideoMetadataResponse {
    repeated VideoMetadata videoMetadatas = 1;
}

message UpdateVideoMetadataRequest {
    string id = 1;
    string status = 2;
    string thumbnailUrl = 3;
}
